Add local git config

--- a/dot_config/git/config.tmpl
+++ b/dot_config/git/config.tmpl
@@ -257,3 +257,6 @@
 [user]
   name = Morgan Courbet
   email = {{ .git.email | quote }}
+[include]
+  # local customization
+  path = ~/.config/git/gitconfig_local
