Automate installation of Chocolatey packages

--- a/.chezmoi.yaml.tmpl
+++ b/.chezmoi.yaml.tmpl
@@ -10,6 +10,7 @@ cd:
 data:
   git:
     email: {{ promptString "email" }}
+  usage: {{ promptString "usage (work|home)" }}
 
 diff:
   pager: delta
