Fix Chocolatey package name

--- a/dot_chocolatey/chocolatey-packages.config.tmpl
+++ b/dot_chocolatey/chocolatey-packages.config.tmpl
@@ -7,7 +7,7 @@
   <package id="chocolateygui" />
   <package id="chromium" />
   <package id="clink" />
-  <package id="AdoptConEmuOpenJDK11" />
+  <package id="ConEmu" />
   <package id="curl" />
   <package id="delta" />
   <package id="dust" />
