Change git `pull.rebase` config

--- a/dot_config/git/config.tmpl
+++ b/dot_config/git/config.tmpl
@@ -244,7 +244,7 @@
   reflog = delta
   show = delta
 [pull]
-  rebase = preserve
+  rebase = merges
 [push]
   default = simple
   followTags = true
