Make `chezmoi init` prompt clearer

--- a/.chezmoi.yaml.tmpl
+++ b/.chezmoi.yaml.tmpl
@@ -9,7 +9,7 @@ cd:
 
 data:
   git:
-    email: {{ promptString "email" }}
+    email: {{ promptString "git email" }}
   usage: {{ promptString "usage (work|home)" }}
 
 diff:
