Add firacodenf Chocolatey package

--- a/dot_chocolatey/chocolatey-packages.config.tmpl
+++ b/dot_chocolatey/chocolatey-packages.config.tmpl
@@ -13,6 +13,7 @@
   <package id="dust" />
   <package id="etcher" />
   <package id="fd" />
+  <package id="firacodenf" />
   <package id="Firefox" />
   <package id="fzf" />
   <package id="git" />
