--- a/dot_config/starship.toml.tmpl
+++ b/dot_config/starship.toml.tmpl
@@ -5,15 +5,15 @@ truncation_symbol = "…/"
 tag_disabled = false
 {{- if eq .chezmoi.hostname "PC8043" }}
 tag_symbol = " tag:"
-{{ end -}}
+{{ end }}
 
 {{- if eq .chezmoi.hostname "PC8043" }}
 [package]
 symbol = "pkg "
-{{ end -}}
+{{ end }}
 
 [shlvl]
 disabled = false
 {{- if eq .chezmoi.hostname "PC8043" }}
 symbol = "lvl "
-{{ end -}}
+{{ end }}
