--- a/dot_profile.tmpl
+++ b/dot_profile.tmpl
@@ -9,4 +9,6 @@ alias ....='cd ../../..'
 alias ~='cd ~'
 
 export EDITOR=subl
+export LESS={{ .envvars.LESS }}
+export PAGER={{ .envvars.PAGER }}
 export RIPGREP_CONFIG_PATH=~/.config/ripgrep/ripgreprc
