--- a/Documents/PowerShell/profile.ps1.tmpl
+++ b/Documents/PowerShell/profile.ps1.tmpl
@@ -21,6 +21,7 @@ Invoke-Expression (& { $hook = if ($PSVersionTable.PSVersion.Major -ge 6) { 'pwd
 Invoke-Expression (& { (just --completions powershell ) -join "`n" })
 Import-Module posh-git
 Invoke-Expression (& { (chezmoi completion powershell) -join "`n" })
+Invoke-Expression (& { (miniserve --print-completions powershell) -join "`n" })
 
 
 
