Add `list` PowerShell alias

--- a/Documents/PowerShell/profile.ps1.tmpl
+++ b/Documents/PowerShell/profile.ps1.tmpl
@@ -3,6 +3,7 @@ New-Alias -Name cm -Value chezmoi
 New-Alias -Name d -Value docker
 New-Alias -Name g -Value git
 New-Alias -Name lg -Value lazygit
+New-Alias -Name list -Value Get-ChildItem
 
 
 # display possible completion with fzf instead of completing
