--- a/dot_config/git/config.tmpl
+++ b/dot_config/git/config.tmpl
@@ -253,7 +253,7 @@
   short = true
 [user]
   name = Morgan Courbet
-  email = {{ .git.email | quote }}
+  email = {{ .gitemail }}
 [include]
   # local customization
   path = ~/.config/git/gitconfig_local
