Add `functions.ps1` PowerShell script

--- a/Documents/PowerShell/profile.ps1.tmpl
+++ b/Documents/PowerShell/profile.ps1.tmpl
@@ -1,4 +1,5 @@
 . "$PSScriptRoot/aliases.ps1"
 . "$PSScriptRoot/completions.ps1"
 . "$PSScriptRoot/envvars.ps1"
+. "$PSScriptRoot/functions.ps1"
 . "$PSScriptRoot/tools-integration.ps1"
