Add `poshgit` package on Windows

--- a/dot_chocolatey/chocolatey-packages.config.tmpl
+++ b/dot_chocolatey/chocolatey-packages.config.tmpl
@@ -27,6 +27,7 @@
   <package id="navi" />
   <package id="openhardwaremonitor" />
   <package id="pandoc" />
+  <package id="poshgit" /> 
   <package id="powershell-core" />
   <package id="procexp" />
   <package id="psutils" />
