Refactor Scoop package installation script

--- a/dot_scoop/run_once_install-scoop-packages.ps1.tmpl
+++ b/dot_scoop/run_once_install-scoop-packages.ps1.tmpl
@@ -1,1 +1,10 @@
-scoop install bat broot just less lsd procs starship topgrade xh
+scoop install `
+  bat `
+  broot `
+  just `
+  less `
+  lsd `
+  procs `
+  starship `
+  topgrade `
+  xh
