--- a/Documents/PowerShell/envvars.ps1.tmpl
+++ b/Documents/PowerShell/envvars.ps1.tmpl
@@ -1,5 +1,5 @@
-$Env:LESS = { { .envvars.LESS | quote } }
-$Env:PAGER = { { .envvars.PAGER | quote } }
+$Env:LESS = {{ .envvars.less | quote }}
+$Env:PAGER = {{ .envvars.pager | quote }}
 $Env:RIPGREP_CONFIG_PATH = "$Env:USERPROFILE\.config\ripgrep\ripgreprc"
 # count shell level
 $Env:SHLVL = [int] $Env:SHLVL + 1
