--- a/dot_profile.tmpl
+++ b/dot_profile.tmpl
@@ -1,4 +1,4 @@
 export EDITOR=subl
-export LESS={{ .envvars.LESS | quote }}
-export PAGER={{ .envvars.PAGER }}
+export LESS={{ .envvars.less | quote }}
+export PAGER={{ .envvars.pager }}
 export RIPGREP_CONFIG_PATH=~/.config/ripgrep/ripgreprc
