Move `clink` from Chocolatey to Scoop

--- a/dot_scoop/run_once_install-scoop-packages.ps1.tmpl
+++ b/dot_scoop/run_once_install-scoop-packages.ps1.tmpl
@@ -1,6 +1,7 @@
 scoop install `
   bat `
   broot `
+  clink `
   just `
   less `
   lsd `
@@ -8,3 +9,5 @@ scoop install `
   starship `
   topgrade `
   xh
+
+clink autorun install
