--- a/Documents/PowerShell/envvars.ps1.tmpl
+++ b/Documents/PowerShell/envvars.ps1.tmpl
@@ -1,4 +1,5 @@
 $Env:LESS = {{ .envvars.less | quote }}
+$Env:MAVEN_OPTS = "-Dfile.encoding=UTF-8"
 $Env:PAGER = {{ .envvars.pager | quote }}
 $Env:RIPGREP_CONFIG_PATH = "$Env:USERPROFILE\.config\ripgrep\ripgreprc"
 # count shell level
