--- a/dot_profile.tmpl
+++ b/dot_profile.tmpl
@@ -1,4 +1,5 @@
 export EDITOR=subl
 export LESS={{ .envvars.less | quote }}
+export MAVEN_OPTS="-Dfile.encoding=UTF-8"
 export PAGER={{ .envvars.pager }}
 export RIPGREP_CONFIG_PATH=~/.config/ripgrep/ripgreprc
