Add `cascadiafonts` to Chocolatey

--- a/dot_chocolatey/chocolatey-packages.config.tmpl
+++ b/dot_chocolatey/chocolatey-packages.config.tmpl
@@ -4,6 +4,7 @@
   <package id="AdoptOpenJDK11" />
   <package id="alacritty" />
   <package id="bottom" />
+  <package id="cascadiafonts" />
   <package id="chocolateygui" />
   <package id="chromium" />
   <package id="ConEmu" />
