Add IP address to prompt when SSHing

--- a/dot_config/starship.toml.tmpl
+++ b/dot_config/starship.toml.tmpl
@@ -10,6 +10,9 @@ tag_symbol = " tag:"
 [git_metrics]
 disabled = false
 
+[localip]
+disabled = false
+
 {{- if eq .chezmoi.hostname "PC8043" }}
 [package]
 symbol = "pkg "
