Update starship config file formatting

--- a/dot_config/starship.toml.tmpl
+++ b/dot_config/starship.toml.tmpl
@@ -13,7 +13,7 @@ disabled = false
 [localip]
 disabled = false
 
-{{- if eq .chezmoi.hostname "PC8043" }}
+{{ if eq .chezmoi.hostname "PC8043" }}
 [package]
 symbol = "pkg "
 {{ end }}
