Migrate `java` from Chocolatey to Scoop

--- a/dot_scoop/run_once_install-scoop-packages.ps1.tmpl
+++ b/dot_scoop/run_once_install-scoop-packages.ps1.tmpl
@@ -1,3 +1,5 @@
+scoop bucket add java
+
 scoop install `
   7zip `
   alacritty `
@@ -30,6 +32,9 @@ scoop install `
   screentogif `
   starship `
   sumatrapdf `
+  temurin8-jdk `
+  temurin11-jdk `
+  temurin17-jdk `
   topgrade `
   vscode `
   wget `
