Add `COLORTERM` pwsh env var

--- a/Documents/PowerShell/envvars.ps1.tmpl
+++ b/Documents/PowerShell/envvars.ps1.tmpl
@@ -1,3 +1,4 @@
+$Env:COLORTERM = 'truecolor'
 $Env:LESS = {{ .envvars.less | quote }}
 $Env:PAGER = {{ .envvars.pager | quote }}
 $Env:RIPGREP_CONFIG_PATH = "$Env:USERPROFILE\.config\ripgrep\ripgreprc"
