Make Git fetch all remotes

--- a/dot_config/git/config.tmpl
+++ b/dot_config/git/config.tmpl
@@ -51,7 +51,7 @@
   dfsiw = diff --cached --ignore-all-space
   dfw = diff --word-diff=color
   dfws = "!sh -c 'git df --cached' -"
-  fe = fetch
+  fe = fetch --all
   fl = flow
   flb = flow bugfix
   flbc = flow bugfix checkout
