Enable shell name in Starship prompt

--- a/dot_config/starship.toml.tmpl
+++ b/dot_config/starship.toml.tmpl
@@ -10,5 +10,10 @@ disabled = false
 [localip]
 disabled = false
 
+{{ if eq .chezmoi.hostname "PC8052" -}}
+[shell]
+disabled = false
+{{- end }}
+
 [shlvl]
 disabled = false
