--- a/dot_config/git/config.tmpl
+++ b/dot_config/git/config.tmpl
@@ -211,6 +211,7 @@
   line-numbers = true
 [diff]
   colorMoved = dimmed_zebra
+  external = difft
   # use (i)ndex, (w)ork tree, (c)ommit and (o)bject instead of a/b/c/d
   mnemonicprefix = true
 [diff "exif"]
