Set Git default branch name

--- a/dot_config/git/config.tmpl
+++ b/dot_config/git/config.tmpl
@@ -226,6 +226,8 @@
   clean = unexpand --tabs=2 --first-only
 [format]
   pretty = %C(red)%h%C(reset) -%C(auto)%d%C(reset) %s %C(green)(%ad)%C(reset) %C(blue)[%an]%C(reset)
+[init]
+  defaultBranch = develop
 [log]
   date = relative
 [merge]
