Change default Git editor to Micro

--- a/dot_config/git/config.tmpl
+++ b/dot_config/git/config.tmpl
@@ -205,7 +205,7 @@
   cleanup = scissors
 [core]
   attributesFile = ~/.config/git/gitattributes_global
-  editor = nano
+  editor = micro
   excludesfile = ~/.config/git/gitignore_global
   whitespace = blank-at-eol,space-before-tab,tab-in-indent,blank-at-eof
 [delta]
