Add `sw` alias to Git

--- a/dot_config/git/config.tmpl
+++ b/dot_config/git/config.tmpl
@@ -173,6 +173,7 @@
   sss = stash save --include-untracked
   st = status
   sti = status --ignored
+  sw = switch
   tg = tag
   tgd = tag --delete
   tgs = tag --sign
