Fix britle work-specific config

--- a/dot_config/starship.toml.tmpl
+++ b/dot_config/starship.toml.tmpl
@@ -13,7 +13,7 @@ disabled = false
 [localip]
 disabled = false
 
-{{ if eq .chezmoi.hostname "PC8052" -}}
+{{ if eq .usage "work" -}}
 [shell]
 disabled = false
 {{- end }}
