Replace path for Sublime Text on Windows to scoop

--- a/dot_config/chezmoi/bin/windows/run_onchange_after_install-windows-preferences.ps1.tmpl
+++ b/dot_config/chezmoi/bin/windows/run_onchange_after_install-windows-preferences.ps1.tmpl
@@ -1,2 +1,2 @@
-# windows-preferences.reg hash: {{ include "dot_config/chezmoi/bin/windows/windows-preferences.reg" | sha256sum }}
+# windows-preferences.reg hash: {{ include "dot_config/chezmoi/bin/windows/windows-preferences.reg.tmpl" | sha256sum }}
 reg import $Env:UserProfile\.config\chezmoi\bin\windows\windows-preferences.reg
