--- a/dot_config/chezmoi/bin/windows/windows-preferences.reg.tmpl
+++ b/dot_config/chezmoi/bin/windows/windows-preferences.reg.tmpl
@@ -3,23 +3,23 @@ Windows Registry Editor Version 5.00
 ; contextual menu for a file
 [HKEY_CURRENT_USER\Software\Classes\*\shell\Open with &Sublime Text]
 @="Open with &Sublime Text"
-"Icon"="C:\\Program Files\\Sublime Text\\sublime_text.exe,0"
+"Icon"="{{ .chezmoi.homeDir | replaceAllRegex "/" "\\\\" }}\\scoop\\apps\\sublime-text\\current\\sublime_text.exe,0"
 [HKEY_CURRENT_USER\Software\Classes\*\shell\Open with &Sublime Text\command]
-@="\"C:\\Program Files\\Sublime Text\\sublime_text.exe\" \"%1\""
+@="\"{{ .chezmoi.homeDir | replaceAllRegex "/" "\\\\" }}\\scoop\\apps\\sublime-text\\current\\sublime_text.exe\" \"%1\""
 
 ; contextual menu for a directory
 [HKEY_CURRENT_USER\Software\Classes\Directory\shell\Open with &Sublime Text]
 @="Open with &Sublime Text"
-"Icon"="C:\\Program Files\\Sublime Text\\sublime_text.exe"
+"Icon"="{{ .chezmoi.homeDir | replaceAllRegex "/" "\\\\" }}\\scoop\\apps\\sublime-text\\current\\sublime_text.exe"
 [HKEY_CURRENT_USER\Software\Classes\Directory\shell\Open with &Sublime Text\command]
-@="\"C:\\Program Files\\Sublime Text\\sublime_text.exe\" \"%1\""
+@="\"{{ .chezmoi.homeDir | replaceAllRegex "/" "\\\\" }}\\scoop\\apps\\sublime-text\\current\\sublime_text.exe\" \"%1\""
 
 ; contextual menu for a directory background
 [HKEY_CURRENT_USER\Software\Classes\Directory\Background\shell\Open with &Sublime Text]
 @="Open with &Sublime Text"
-"Icon"="C:\\Program Files\\Sublime Text\\sublime_text.exe"
+"Icon"="{{ .chezmoi.homeDir | replaceAllRegex "/" "\\\\" }}\\scoop\\apps\\sublime-text\\current\\sublime_text.exe"
 [HKEY_CURRENT_USER\Software\Classes\Directory\Background\shell\Open with &Sublime Text\command]
-@="\"C:\\Program Files\\Sublime Text\\sublime_text.exe\" \"%V\""
+@="\"{{ .chezmoi.homeDir | replaceAllRegex "/" "\\\\" }}\\scoop\\apps\\sublime-text\\current\\sublime_text.exe\" \"%V\""
 
 [HKEY_CURRENT_USER\Control Panel\Accessibility\Keyboard Response]
 ; disable filter keys
