--- a/dot_profile.tmpl
+++ b/dot_profile.tmpl
@@ -1,4 +1,5 @@
 export EDITOR=subl
 export LESS={{ .envvars.less | quote }}
 export PAGER={{ .envvars.pager }}
+export PATH=~/.local/bin:$PATH
 export RIPGREP_CONFIG_PATH=~/.config/ripgrep/ripgreprc
