Use symlink as per recommended in the Strongbox documentation
Link to the documentation: https://strongboxsafe.com/support/#reamaze#0#/kb/ssh-agent/ssh-agent

--- a/private_dot_ssh/config.tmpl
+++ b/private_dot_ssh/config.tmpl
@@ -6,5 +6,5 @@ Host github.com
 {{ end }}
 {{ if eq .chezmoi.os "darwin" }}
 Host *
-  IdentityAgent "~/Library/Group Containers/group.strongbox.mac.mcguill/agent.sock"
+  IdentityAgent ~/.strongbox/agent.sock
 {{ end }}
