Use `joinPath` instead of concatenating paths manually

--- a/Documents/autohotkey-scripts/symlink_morgan.ahk.tmpl
+++ b/Documents/autohotkey-scripts/symlink_morgan.ahk.tmpl
@@ -1,1 +1,1 @@
-{{ env "APPDATA" }}\Microsoft\Windows\Start Menu\Programs\Startup\morgan.ahk
+{{ joinPath (env "APPDATA") "Microsoft/Windows/Start Menu/Programs/Startup/morgan.ahk" }}
