--- a/private_dot_strongbox/symlink_agent.sock.tmpl
+++ b/private_dot_strongbox/symlink_agent.sock.tmpl
@@ -1,1 +1,1 @@
-{{ env "HOME" }}/Library/Group Containers/group.strongbox.mac.mcguill/agent.sock
+{{ joinPath (env "HOME") "Library/Group Containers/group.strongbox.mac.mcguill/agent.sock" }}
