--- a/scoop/persist/sublime-merge/Data/Packages/User/symlink_Preferences.sublime-settings.tmpl
+++ b/scoop/persist/sublime-merge/Data/Packages/User/symlink_Preferences.sublime-settings.tmpl
@@ -1,1 +1,1 @@
-{{ env "APPDATA" }}\Sublime Merge\Packages\User\Preferences.sublime-settings
+{{ joinPath (env "APPDATA") "Sublime Merge/Packages/User/Preferences.sublime-settings" }}
