--- a/scoop/persist/sublime-text/Data/Packages/User/symlink_Preferences.sublime-settings.tmpl
+++ b/scoop/persist/sublime-text/Data/Packages/User/symlink_Preferences.sublime-settings.tmpl
@@ -1,1 +1,1 @@
-{{ env "APPDATA" }}\Sublime Text\Packages\User\Preferences.sublime-settings
+{{ joinPath (env "APPDATA") "Sublime Text/Packages/User/Preferences.sublime-settings" }}
