Install Windows app context menus automatically

--- a/dot_config/chezmoi/bin/windows/run_onchange_before_windows-10-install-packages.ps1.tmpl
+++ b/dot_config/chezmoi/bin/windows/run_onchange_before_windows-10-install-packages.ps1.tmpl
@@ -2,7 +2,7 @@
 scoop bucket add extras
 scoop bucket add java
 scoop install `
-{{ range .packages.windows.scoop -}}
+{{ range .packages.windows.scoop.packages -}}
   {{ . | quote }} `
 {{ end -}}
 {{ end -}}
