Add nerd-fonts to Scoop packages

--- a/dot_config/chezmoi/bin/windows/run_onchange_before_windows-10-install-packages.ps1.tmpl
+++ b/dot_config/chezmoi/bin/windows/run_onchange_before_windows-10-install-packages.ps1.tmpl
@@ -1,6 +1,7 @@
 {{ if eq .chezmoi.os "windows" -}}
 scoop bucket add extras
 scoop bucket add java
+scoop bucket add nerd-fonts
 scoop install `
 {{ range .packages.windows.scoop.packages -}}
   {{ . | quote }} `
