Add personal Scoop bucket

--- a/dot_config/chezmoi/bin/windows/run_onchange_before_windows-10-install-packages.ps1.tmpl
+++ b/dot_config/chezmoi/bin/windows/run_onchange_before_windows-10-install-packages.ps1.tmpl
@@ -2,6 +2,7 @@
 scoop bucket add extras
 scoop bucket add java
 scoop bucket add nerd-fonts
+scoop bucket add morgan https://github.com/nagromc/scoop-bucket
 scoop install `
 {{ range .packages.windows.scoop.packages -}}
   {{ . | quote }} `
