Improve comments in Windows registry preferences

--- a/dot_config/chezmoi/bin/windows/windows-preferences.reg.tmpl
+++ b/dot_config/chezmoi/bin/windows/windows-preferences.reg.tmpl
@@ -13,9 +13,9 @@ Windows Registry Editor Version 5.00
 "Flags"="506"
 
 [HKEY_CURRENT_USER\Control Panel\Keyboard]
-; shortest delay
+; shortest delay before keyboard key repetition
 "KeyboardDelay"="0"
 
 [HKEY_CURRENT_USER\Control Panel\Keyboard]
-; maximun rate
+; maximum keyboard key repetition rate
 "KeyboardSpeed"="31"
