--- a/.chezmoiscripts/macos/run_once_install-vscode-extensions.sh.tmpl
+++ b/.chezmoiscripts/macos/run_once_install-vscode-extensions.sh.tmpl
@@ -1,7 +1,5 @@
 #!/usr/bin/env bash
 
-# vscode-extensions.txt hash: {{ include "dot_config/chezmoi/bin/vscode-extensions.txt" | sha256sum }}
-cat ../vscode-extensions.txt | while read extension || [[ -n $extension ]];
-do
-  code --install-extension $extension --force
-done
+{{ range .vscode.extensions -}}
+  code --install-extension --force {{ . }}
+{{ end -}}
