--- a/.chezmoiscripts/windows/run_onchange_after_install-windows-preferences.ps1.tmpl
+++ b/.chezmoiscripts/windows/run_onchange_after_install-windows-preferences.ps1.tmpl
@@ -1,6 +1,6 @@
-# sublime-merge-contextual-menu.reg hash: {{ include "dot_config/chezmoi/bin/windows/sublime-merge-contextual-menu.reg.tmpl" | sha256sum }}
-# sublime-text-contextual-menu.reg hash: {{ include "dot_config/chezmoi/bin/windows/sublime-text-contextual-menu.reg.tmpl" | sha256sum }}
-# windows-preferences.reg hash: {{ include "dot_config/chezmoi/bin/windows/windows-preferences.reg.tmpl" | sha256sum }}
-reg import $Env:UserProfile\.config\chezmoi\bin\windows\sublime-merge-contextual-menu.reg
-reg import $Env:UserProfile\.config\chezmoi\bin\windows\sublime-text-contextual-menu.reg
-reg import $Env:UserProfile\.config\chezmoi\bin\windows\windows-preferences.reg
+# sublime-merge-contextual-menu.reg hash: {{ include "dot_local/share/chezmoi-scripts-data/windows/sublime-merge-contextual-menu.reg.tmpl" | sha256sum }}
+# sublime-text-contextual-menu.reg hash: {{ include "dot_local/share/chezmoi-scripts-data/windows/sublime-text-contextual-menu.reg.tmpl" | sha256sum }}
+# windows-preferences.reg hash: {{ include "dot_local/share/chezmoi-scripts-data/windows/windows-preferences.reg" | sha256sum }}
+reg import {{ .chezmoi.homeDir }}\.local\share\chezmoi-scripts-data\windows\sublime-merge-contextual-menu.reg
+reg import {{ .chezmoi.homeDir }}\.local\share\chezmoi-scripts-data\windows\sublime-text-contextual-menu.reg
+reg import {{ .chezmoi.homeDir }}\.local\share\chezmoi-scripts-data\windows\windows-preferences.reg
