Distinguishing between pwsh and powershell in Starship

--- a/dot_config/starship.toml.tmpl
+++ b/dot_config/starship.toml.tmpl
@@ -16,6 +16,8 @@ disabled = false
 {{ if eq .usage "work" -}}
 [shell]
 disabled = false
+powershell_indicator = "Windows PowerShell"
+pwsh_indicator = "pwsh"
 {{- end }}
 
 [shlvl]
