Ignore `.config/scoop` for platforms other than Windows

--- a/.chezmoiignore.tmpl
+++ b/.chezmoiignore.tmpl
@@ -17,6 +17,7 @@ Library
 {{ if ne .chezmoi.os "windows" }}
 .chezmoiscripts/windows/**
 .chocolatey/
+.config/scoop
 AppData
 Documents/autohotkey-scripts
 Documents/PowerShell
