Ignore `dotfiles.sublime-workspace`

--- a/.chezmoiignore.tmpl
+++ b/.chezmoiignore.tmpl
@@ -1,6 +1,7 @@
 .chezmoiscriptsdata/
 bootstrap.ps1
 dotfiles.sublime-project
+dotfiles.sublime-workspace
 README.md
 
 {{ if ne .chezmoi.os "darwin" }}
