Add Pioupiou ETA to Starship prompt
J’ai hâte de te tenir dans mes bras 💚

--- a/dot_config/starship.toml.tmpl
+++ b/dot_config/starship.toml.tmpl
@@ -1,3 +1,11 @@
+[custom.pioupiou-eta]
+command = "echo 6 months, 8 days"
+when = true
+description = "The ETA of Pioupiou"
+symbol = "🐣 "
+style = "105 bold"
+format = "ETA [$symbol($output )]($style)"
+
 [directory]
 truncation_symbol = "…/"
 
