Use `pioupiou-eta` to make the ETA dynamic

--- a/dot_config/starship.toml.tmpl
+++ b/dot_config/starship.toml.tmpl
@@ -1,5 +1,5 @@
 [custom.pioupiou-eta]
-command = "echo 6 months, 8 days"
+command = "pioupiou-eta --dob '2024-08-20' --format days"
 when = true
 description = "The ETA of Pioupiou"
 symbol = "🐣 "
