Change pioupiou-eta format

--- a/dot_config/starship.toml.tmpl
+++ b/dot_config/starship.toml.tmpl
@@ -3,7 +3,7 @@ command = "pioupiou-eta --dob '2024-08-20' --format days"
 when = true
 description = "The ETA of Pioupiou"
 symbol = "🐣 "
-style = "105 bold"
+style = "105 italic dimmed"
 format = "ETA [$symbol($output )]($style)"
 
 [directory]
