Don’t apply node-related files on target

--- a/.chezmoiignore.tmpl
+++ b/.chezmoiignore.tmpl
@@ -1,7 +1,10 @@
+node_modules/
 .chezmoiscriptsdata/
 bootstrap.ps1
 dotfiles.sublime-project
 dotfiles.sublime-workspace
+package-lock.json
+package.json
 README.md
 
 {{ if ne .chezmoi.os "darwin" }}
