Add yazi configuration

--- a/AppData/Roaming/nushell/env.nu.tmpl
+++ b/AppData/Roaming/nushell/env.nu.tmpl
@@ -12,3 +12,6 @@ starship init nu | save --force ~/.cache/starship/init.nu
 $env.EDITOR = 'micro'
 $env.RIPGREP_CONFIG_PATH = $nu.home-path + "/.config/ripgrep/ripgreprc"
 $env.VISUAL = 'micro'
+{{ if eq .chezmoi.os "windows" -}}
+$env.YAZI_FILE_ONE = $nu.home-path + "/scoop/apps/git/current/usr/bin/file.exe"
+{{- end }}
