Add Vim configuration

--- a/.chezmoiignore.tmpl
+++ b/.chezmoiignore.tmpl
@@ -26,9 +26,11 @@ AppData
 Documents/autohotkey-scripts
 Documents/PowerShell
 scoop/
+vimfiles/
 {{ else }}
 .config/alacritty
 .config/topgrade.toml
+.config/vim
 .bashrc
 .profile
 .zprofile
