Add plugins to ideavim

--- a/dot_config/ideavim/ideavimrc.tmpl
+++ b/dot_config/ideavim/ideavimrc.tmpl
@@ -6,3 +6,7 @@ source ~/.config/vim/vimrc
 
 " use system clipboard when yanking
 set clipboard+=unnamed
+
+Plug 'machakann/vim-highlightedyank'
+Plug 'tpope/vim-commentary'
+Plug 'tpope/vim-surround'
