Add ideajoin feature to ideavim

--- a/dot_config/ideavim/ideavimrc.tmpl
+++ b/dot_config/ideavim/ideavimrc.tmpl
@@ -6,6 +6,8 @@ source ~/.config/vim/vimrc
 
 " use system clipboard when yanking
 set clipboard+=unnamed
+" join commands will be handled by the IDE's smart join feature
+set ideajoin
 
 Plug 'machakann/vim-highlightedyank'
 Plug 'tpope/vim-commentary'
