Add carapace shell completer

--- a/AppData/Roaming/nushell/env.nu.tmpl
+++ b/AppData/Roaming/nushell/env.nu.tmpl
@@ -3,6 +3,10 @@ zoxide init nushell | save --force ~/.config/zoxide.nu
 mkdir ~/.cache/starship
 starship init nu | save --force ~/.cache/starship/init.nu
 
+# carapace shell completer
+mkdir ~/.cache/carapace
+carapace _carapace nushell | save --force ~/.cache/carapace/init.nu
+
 $env.EDITOR = 'micro'
 $env.RIPGREP_CONFIG_PATH = $nu.home-path + "/.config/ripgrep/ripgreprc"
 $env.VISUAL = 'micro'
