Add `compose.yaml` to Starship Docker Context mod
Should be reverted when starship/starship#6620 is closed

--- a/dot_config/starship.toml.tmpl
+++ b/dot_config/starship.toml.tmpl
@@ -1,6 +1,9 @@
 [directory]
 truncation_symbol = "…/"
 
+[docker_context]
+detect_files = ['docker-compose.yml', 'docker-compose.yaml', 'Dockerfile', 'compose.yaml', 'compose.yml']
+
 [git_branch]
 symbol = "󰘬 "
 
