Add kanata configuration

--- a/.chezmoiexternal.yaml.tmpl
+++ b/.chezmoiexternal.yaml.tmpl
@@ -6,3 +6,6 @@ AppData/Local/tealdeer/tealdeer/pages:
   type: git-repo
   url: https://github.com/nagromc/tldr-custom-pages
   refreshPeriod: 168h  # 1 week
+AppData/Roaming/kanata:
+  type: git-repo
+  url: https://github.com/nagromc/kanata-config
