Revert "Remove redundant OS condition"
This reverts commit f5b8940e2c31e5bf060ac96bd0e65ab5740d7a76.

# ------------------------ >8 ------------------------
# Do not modify or remove the line above.
# Everything below it will be ignored.
#
# Conflicts:
#	.chezmoiexternal.yaml.tmpl

--- a/.chezmoiexternal.yaml.tmpl
+++ b/.chezmoiexternal.yaml.tmpl
@@ -1,3 +1,4 @@
+{{ if eq .chezmoi.os "windows" }}
 AppData/Local/clink/gizmos:
   type: git-repo
   url: https://github.com/chrisant996/clink-gizmos
@@ -9,3 +10,4 @@ AppData/Local/tealdeer/tealdeer/pages:
 AppData/Roaming/kanata:
   type: git-repo
   url: https://github.com/nagromc/kanata-config
+{{ end }}
