Refresh Kanata config every day

--- a/.chezmoiexternal.yaml.tmpl
+++ b/.chezmoiexternal.yaml.tmpl
@@ -10,4 +10,5 @@ AppData/Local/tealdeer/tealdeer/pages:
 AppData/Roaming/kanata:
   type: git-repo
   url: https://github.com/nagromc/kanata-config
+  refreshPeriod: 24h  # 1 day
 {{ end }}
