--- a/.chezmoiexternal.yaml.tmpl
+++ b/.chezmoiexternal.yaml.tmpl
@@ -18,4 +18,7 @@ AppData/Roaming/kanata:
   type: git-repo
   url: https://github.com/nagromc/kanata-config
   refreshPeriod: 24h  # 1 day
+AppData/Roaming/Microsoft/Windows/Start Menu/Programs/Startup/kanata_gui.exe:
+  type: file
+  url: https://github.com/jtroo/kanata/releases/download/v1.8.1/kanata_gui.exe
 {{ end }}
