Change `EDITOR` to `vim`

--- a/AppData/Roaming/nushell/env.nu.tmpl
+++ b/AppData/Roaming/nushell/env.nu.tmpl
@@ -7,6 +7,6 @@ starship init nu | save --force ~/.cache/starship/init.nu
 mkdir ~/.cache/carapace
 carapace _carapace nushell | save --force ~/.cache/carapace/init.nu
 
-$env.EDITOR = 'micro'
+$env.EDITOR = 'vim'
 $env.RIPGREP_CONFIG_PATH = $nu.home-path + "/.config/ripgrep/ripgreprc"
 $env.VISUAL = 'micro'
