--- a/Documents/PowerShell/envvars.ps1.tmpl
+++ b/Documents/PowerShell/envvars.ps1.tmpl
@@ -1,5 +1,5 @@
 $Env:COLORTERM = 'truecolor'
-$Env:EDITOR = "micro"
+$Env:EDITOR = "vim"
 $Env:LESS = {{ .envvars.less | quote }}
 $Env:PAGER = {{ .envvars.pager | quote }}
 $Env:RIPGREP_CONFIG_PATH = "$Env:USERPROFILE\.config\ripgrep\ripgreprc"
