--- a/dot_profile.tmpl
+++ b/dot_profile.tmpl
@@ -1,4 +1,4 @@
-export EDITOR=subl
+export EDITOR=vim
 export LESS={{ .envvars.less | quote }}
 export PAGER={{ .envvars.pager }}
 export PATH=~/.local/bin:$PATH
