--- a/dot_config/git/config.tmpl
+++ b/dot_config/git/config.tmpl
@@ -246,8 +246,12 @@
 [log]
   date = relative
 [merge]
+  conflictStyle = "diff3"
   ff = false
   tool = vimdiff
+[merge "mergiraf"]
+  name = mergiraf
+  driver = mergiraf merge --git %O %A %B -s %S -x %X -y %Y -p %P -l %L
 [status]
   branch = true
   short = true
