--- a/.chezmoiscripts/windows/run_onchange_before_windows-10-install-packages.ps1.tmpl
+++ b/.chezmoiscripts/windows/run_onchange_before_windows-10-install-packages.ps1.tmpl
@@ -2,6 +2,7 @@ scoop bucket add extras
 scoop bucket add java
 scoop bucket add nerd-fonts
 scoop bucket add morgan https://github.com/nagromc/scoop-bucket
+scoop bucket add versions
 
 scoop install `
 {{ range .packages.windows.scoop.packages -}}
